commit with alignment issues

--- a/EmployeeManagementSystemNew/src/main/webapp/CSS/header2.css
+++ b/EmployeeManagementSystemNew/src/main/webapp/CSS/header2.css
@@ -118,3 +118,6 @@ select {
  padding-left: 40px;
  padding-right: 30px;
 }
+#pre_add_noticeboard{
+	padding-left: 60px;
+}
