--- a/EmployeeManagementSystemNew/src/main/webapp/FormValidation(css)/updateUser.css
+++ b/EmployeeManagementSystemNew/src/main/webapp/FormValidation(css)/updateUser.css
@@ -30,4 +30,7 @@ tr{
 td{
 	text-align: left;
 }
+#Employee_Leave_Details_Div{
+	padding-left: 200px;
+}
 
